# picosam3

./: .gitignore  INSTALL.md  README.md  demo_imx500.py  demo_picosam3.py  init.sh  pyproject.toml  run_demo.sh
model_compression/: qualitative_comparison.py  qualitative_picosam3.py  sam3_teacher_precompute.py
model_compression/picosam2/: qualitative_comparison.py
model_compression/scripts/: qualitative_comparison.py  robustness_study.py
rebuttal_tables/: mobilevit_seg_comparison.py  padding_ablation.py  tab_multiobj_robustness.tex  tab_spatial_robustness.tex
