[build-system]
requires = [
    "setuptools>=61.0",
    "torch>=2.5.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "SAM-2"
version = "1.0"
description = "SAM 2: Segment Anything in Images and Videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "numpy>=1.24.4",
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "pillow>=9.4.0",
    "pycocotools>=2.0.11",
    "wandb>=0.27.0",
    "huggingface-hub>=1.15.0",
    "decord>=0.6.0; platform_machine != 'aarch64'",
    "ftfy>=6.3.1",
    "einops>=0.8.2",
    "timm>=1.0.27",
    "psutil>=7.2.2",
    "regex>=2026.5.9",
    "transformers>=5.9.0",
    "open-clip-torch>=3.3.0",
]

[project.optional-dependencies]
notebooks = [
    "matplotlib>=3.9.1",
    "jupyter>=1.0.0",
    "opencv-python>=4.7.0",
    "eva-decord>=0.6.1; platform_machine != 'aarch64'",
]
dev = [
    "black==24.2.0",
    "usort==1.0.2",
    "ufmt==2.0.0b2",
    "fvcore>=0.1.5.post20221221",
    "pandas>=2.2.2",
    "scikit-image>=0.24.0",
    "tensorboard>=2.17.0",
    "pycocotools>=2.0.8",
    "tensordict>=0.6.0",
    "opencv-python>=4.7.0",
    "submitit>=1.5.1",
]

# CUDA index removed for CPU-only (aarch64) install
